; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-omap/extr_omap-pm-noop.c_omap_pm_set_max_sdma_lat.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-omap/extr_omap-pm-noop.c_omap_pm_set_max_sdma_lat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

@.str = private unnamed_addr constant [52 x i8] c"OMAP PM: remove max DMA latency constraint: dev %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [63 x i8] c"OMAP PM: add max DMA latency constraint: dev %s, t = %ld usec\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @omap_pm_set_max_sdma_lat(%struct.device* %0, i64 %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i64, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.device*, %struct.device** %3, align 8
  %6 = icmp ne %struct.device* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i64, i64* %4, align 8
  %9 = icmp slt i64 %8, -1
  br i1 %9, label %10, label %12

10:                                               ; preds = %7, %2
  %11 = call i32 @WARN_ON(i32 1)
  br label %24

12:                                               ; preds = %7
  %13 = load i64, i64* %4, align 8
  %14 = icmp eq i64 %13, -1
  br i1 %14, label %15, label %19

15:                                               ; preds = %12
  %16 = load %struct.device*, %struct.device** %3, align 8
  %17 = call i32 @dev_name(%struct.device* %16)
  %18 = call i32 (i8*, i32, ...) @pr_debug(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str, i64 0, i64 0), i32 %17)
  br label %24

19:                                               ; preds = %12
  %20 = load %struct.device*, %struct.device** %3, align 8
  %21 = call i32 @dev_name(%struct.device* %20)
  %22 = load i64, i64* %4, align 8
  %23 = call i32 (i8*, i32, ...) @pr_debug(i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.1, i64 0, i64 0), i32 %21, i64 %22)
  br label %24

24:                                               ; preds = %10, %19, %15
  ret void
}

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @pr_debug(i8*, i32, ...) #1

declare dso_local i32 @dev_name(%struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
